syntax = "proto3";

package roles_pb;
option go_package = "auth-service/internal/grpc/pb/roles_pb";

import "common.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";


message Role {
  common.ID id = 1;
  string title = 2;
  google.protobuf.Struct description = 3;
  google.protobuf.Timestamp createdAt = 4;
}

message RoleInput {
  string title = 1;
  google.protobuf.Struct description = 2;
}

message RoleList {
  repeated roles_pb.Role roles = 1;
}

message RoleCreateRequest {
  RoleInput data = 1;
}

message RoleUpdateRequest {
  common.ID id = 1;
  RoleInput data = 2;
}
